--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.52.2
-tensorflow==2.20.0
-keras==3.13.0
+streamlit
+tensorflow==2.15.0
+keras==2.15.0
 numpy
-pillow
 opencv-python-headless
+pillow
